# paperref

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  noxfile.py
.github/workflows/: ci.yml  lint.yml
backend/: pyproject.toml
backend/app/: config.py  firebase.py  main.py
backend/app/database/: firestore.py
backend/app/routers/: auth.py  graph.py  library.py  papers.py  recommended.py
backend/app/schemas/: auth.py  graph.py  library.py  papers.py
backend/app/services/: auth.py  graph.py  library.py  papers.py  recommended.py
backend/app/utils/: paper.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_graph.py  test_papers.py  test_recommended.py
frontend/: pyproject.toml
frontend/src/: Home.py  utils.py
frontend/src/api/: auth.py  graph.py  library.py  search.py
frontend/src/components/: paper_display.py
frontend/src/pages/: 1_📚_Paper_Library.py  1_🔍_Search.py  2_💠_Citation_Graph.py  2_📚_Library.py  3_💠_Graph.py  3_💡_Recommended.py  4_💡_Recommended.py
frontend/src/styles/: buttons.css
frontend/src/utils/: papers.py
paperref/backend/: pyproject.toml
paperref/backend/app/: config.py  main.py
paperref/backend/app/routers/: auth.py
paperref/backend/app/schemas/: auth.py
paperref/backend/app/services/: auth.py
paperref/frontend/: Home.py  authentication.py  pyproject.toml
paperref/frontend/pages/: 1_📚_Paper_Library.py  2_💠_Citation_Graph.py  3_💡_Recommended.py
paperref/frontend/src/: Home.py
paperref/frontend/src/.streamlit/: secrets.toml
paperref/frontend/src/pages/: 1_📚_Paper_Library.py
