[project]
name = "paperref-backend"
version = "0.1.0"
description = "PaperRef backend REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]",
    "requests",
    "google-cloud-firestore",
    "firebase-admin",
]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]