[project]
name = "paperref-backend"
version = "0.1.0"
description = "PaperRef backend REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]",
    "requests",
    "google-cloud-firestore",
    "firebase-admin",
    "faiss-cpu",
    "rank-llm",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-community"
]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff.lint]
ignore = [
  "PLR",    # Design related pylint codes
  "PT004",  # Use underscore for non-returning fixture (use usefixture instead)
  "ISC001", # Conflicts with formatter
  "E402",   # Module level import not at top of file
]