[project]
name = "paperref-backend"
version = "0.1.0"
description = "PaperRef backend REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]",
    # "pyjwt",
    # "firebase-admin",
    # "google-cloud-firestore"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]